# living-doc-toolkit

./: .gitignore  CHANGELOG.md  DEVELOPER.md  README.md  SPEC.md  TASKS.md  pyproject.toml
.github/: copilot-instructions.md  copilot-review-rules.md
.github/agents/: devops-engineer.agent.md  reviewer.agent.md  sdet.agent.md  senior-developer.agent.md  specification-master.agent.md
.github/workflows/: check_pr_release_notes.yml  ci.yml  dependabot.yml  integration.yml  release_draft.yml  test.yml
apps/cli/: README.md  pyproject.toml
apps/cli/src/living_doc_cli/: __init__.py  main.py
apps/cli/src/living_doc_cli/commands/: __init__.py  normalize_issues.py
apps/cli/tests/: __init__.py  test_cli.py
apps/cli/tests/integration/: __init__.py  test_cli_invocation.py
docs/: architecture.md  troubleshooting.md
docs/cookbooks/: normalize-issues.md
docs/recipes/: github-actions-normalize-issues.md  github-actions-normalize-issues.yml  local-normalize-issues.md
tests/fixtures/collector_gh/v0.9.0/input/: doc-issues.json
tests/fixtures/collector_gh/v1.0.0/input/: doc-issues.json
tests/fixtures/collector_gh/v1.2.0/input/: doc-issues.json
tests/fixtures/collector_gh/v2.0.0/input/: doc-issues.json
tests/fixtures/golden/v1.0.0/: expected_output.json
tests/fixtures/golden/v1.2.0/: expected_output.json
verifications/: verify_compatibility.py  verify_golden.py
